--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "autoprefixer": "^10.2.4",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.19.0",
@@ -49,7 +50,9 @@
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
+    "postcss": "^8.2.6",
     "prettier": "^2.0.2",
+    "tailwindcss": "^2.0.3",
     "typescript": "4.2.2"
   }
 }
